Replaced new Long(x) with Long.valueOf(x) (no garbage to collect).